Kofak Revurdering mer konsekvent ved tilbakehopp til koarb/im